<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_arrangements"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_arrangements" />
        <item
            android:id="@+id/nav_offers"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_offers" />
        <item
            android:id="@+id/nav_booking"
            android:icon="@drawable/logo"
            android:title="@string/menu_booking" />
    </group>
</menu>